cluster/test-depoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  namespace: default
  labels:
    app: nginx-test
  name: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-test
    spec:
      containers:
      - image: nginx:latest
        name: nginx-test
        ports:
        - containerPort: 80
        imagePullPolicy: Always
