cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  selector:
    app: gohelloworld
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetport: 8080
