cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    labels:
      app.kubernetes.io/name: ingress
      app.kubernetes.io/part-of: ingress
    annotations:
      nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
    - hosts:
        - helloworld.gawn.dev
      secretName: cloudflare-origin-cert
  rules:
